--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "daisyui": "^2.38.1",
     "firebase": "^9.13.0",
     "react": "^18.2.0",
+    "react-accessible-accordion": "^5.0.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "5.0.1",
